--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ cymem                      == 2.0.7
 dnspython                  == 2.2.1
 docopt                     == 0.6.2
 email-validator            == 1.3.0
-en-core-web-sm             == 3.4.1
+en-core-web-sm
 filelock                   == 3.8.0
 Flask                      == 2.2.2
 Flask-SQLAlchemy           == 3.0.2
