--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ cymem                      == 2.0.7
 dnspython                  == 2.2.1
 docopt                     == 0.6.2
 email-validator            == 1.3.0
-en-core-web-sm
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0-py3-none-any.whl
 filelock                   == 3.8.0
 Flask                      == 2.2.2
 Flask-SQLAlchemy           == 3.0.2
@@ -34,7 +34,6 @@ optional-django            == 0.1.0
 packaging                  == 21.3
 pathy                      == 0.8.1
 Pillow                     == 9.3.0
-pip                        == 22.3.1
 preshed                    == 3.0.8
 pycountry                  == 22.3.5
 pydantic                   == 1.10.2
