--- a/requirements.txt
+++ b/requirements.txt
@@ -43,8 +43,8 @@ PyYAML                     == 6.0
 regex                      == 2022.10.31
 requests                   == 2.28.1
 scikit-learn               == 1.0.2
-scipy                      == 1.9.3
-sentence-transformers      == 2.2.2
+scipy                      == 1.7.3
+sentence-transformers      
 sentencepiece              == 0.1.97
 setuptools                 == 60.2.0
 six                        == 1.16.0
