--- a/requirements.txt
+++ b/requirements.txt
@@ -50,7 +50,7 @@ setuptools                 == 60.2.0
 six                        == 1.16.0
 smart-open                 == 5.2.1
 soupsieve                  == 2.3.2.post1
-spacy                      == 3.4.3
+spacy                     
 spacy-legacy               == 3.0.10
 spacy-loggers              == 1.0.3
 SQLAlchemy                 == 1.4.44
@@ -64,7 +64,7 @@ torchvision                == 0.14.0
 tqdm                       == 4.64.1
 transformers               == 4.24.0
 typer                      == 0.7.0
-typing_extensions          == 4.4.0
+typing_extensions
 urllib3                    == 1.26.12
 wasabi                     == 0.10.1
 webencodings               == 0.5.1
