--- a/requirements.txt
+++ b/requirements.txt
@@ -71,3 +71,4 @@ webencodings               == 0.5.1
 Werkzeug                   == 2.2.2
 wheel                      == 0.37.1
 WTForms                    == 3.0.1
+gunicorn
